--- a/index.html
+++ b/index.html
@@ -172,5 +172,48 @@
         </div>
         </section>
         <script src="site.js"></script>
-    </body>
-</html> 
+  <!-- Section Événements -->
+    <section class="evenements">
+        <h3>Événements à venir</h3>
+        <div class="events-gallery">
+            <div class="event">
+                <img src="path/to/event1.jpg" alt="Événement 1">
+                <p>Public Talk<br>29/11/2024 19:00-20:30</p>
+            </div>
+            <div class="event">
+                <img src="path/to/event2.jpg" alt="Événement 2">
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section class="newsletter">
+        <p>Ne ratez pas nos futures expositions et événements</p>
+        <h4>ABONNEZ-VOUS À LA NEWSLETTER</h4>
+        <form>
+            <input type="email" placeholder="Entrez votre e-mail">
+            <button>S'inscrire</button>
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="contact">
+            <p>CONTACT</p>
+            <p>+33 09 75 45 85 36</p>
+            <p>info.dedal@gmail.com</p>
+        </div>
+        <div class="address">
+            <p>ADRESSE</p>
+            <p>10 rue de la République</p>
+            <p>75000 Paris</p>
+        </div>
+        <div class="hours">
+            <p>HORAIRES</p>
+            <p>Mardi-samedi : 10h-18h</p>
+            <p>Dimanche-lundi : fermé</p>
+        </div>
+    </footer>
+
+</body>
+</html>
