--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jomolhari&display=swap">
         <link href="https://fonts.googleapis.com/css2?family=Jomolhari&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="siteweb.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     
     <body>
         <header class="header">
             <div class="logo-container">
-                <img src="photo.logo.png" alt="Logo" class="logo">
+                <img src="img/photo.logo.png" alt="Logo" class="logo">
                 <h2 class="name">dedal des couleurs</h2>
             </div>
 
