--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header class="header">
             <div class="logo-container">
-                <img src="photo.logo.png" alt="Logo" class="logo">
+                <img src="images/photo.logo.png" alt="Logo" class="logo">
                 <h2 class="name">dedal des couleurs</h2>
             </div>
 
@@ -51,17 +51,17 @@
                 <div class="slides">
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre7.png" alt="Autoportrait">
+                            <img src="images/oeuvre7.png" alt="Autoportrait">
                             <p class="nom">Autoportrait</p>
                             <p class="artist">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre8.png" alt="Urban Echoes">
+                            <img src="images/oeuvre8.png" alt="Urban Echoes">
                             <p class="nom">Urban Echoes</p>
                             <p class="artist">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre9.png" alt="Intertwined Heart">
+                            <img src="images/oeuvre9.png" alt="Intertwined Heart">
                             <p class="nom">Intertwined Heart</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
@@ -69,17 +69,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre4.png" alt="Dissollusions">
+                            <img src="images/oeuvre4.png" alt="Dissollusions">
                             <p class="nom">Dissollusions</p>
                             <p class="artist">Lena Chastel</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre5.png" alt="Sunset">
+                            <img src="images/oeuvre5.png" alt="Sunset">
                             <p class="nom">Sunset</p>
                             <p class="artist">Iva Lassen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre6.png" alt="C'est Théo">
+                            <img src="images/oeuvre6.png" alt="C'est Théo">
                             <p class="nom">C'est Théo</p>
                             <p class="artist">Théo Goven</p>
                         </div>
@@ -87,17 +87,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre1.png" alt="Trois Sommets">
+                            <img src="images/oeuvre1.png" alt="Trois Sommets">
                             <p class="nom">Trois Sommets</p>
                             <p class="artist">Étienne Monparnasse</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre2.png" alt="Émotion №4">
+                            <img src="images/oeuvre2.png" alt="Émotion №4">
                             <p class="nom">Émotion №4</p>
                             <p class="artist">Lia Verden</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre3.png" alt="Pause Sculptée">
+                            <img src="images/oeuvre3.png" alt="Pause Sculptée">
                             <p class="nom">Pause sculptée</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
