--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header class="header">
             <div class="logo-container">
-                <img src="img/photo.logo.png" alt="Logo" class="logo">
+                <img src="/img/photo.logo.png" alt="Logo" class="logo">
                 <h2 class="name">dedal des couleurs</h2>
             </div>
 
