--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 <div class="slides">
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="img/oeuvre7.png" alt="Autoportrait">
+                            <img src="/img/oeuvre7.png" alt="Autoportrait">
                             <p class="nom">Autoportrait</p>
                             <p class="artist">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre8.png" alt="Urban Echoes">
+                            <img src="/img/oeuvre8.png" alt="Urban Echoes">
                             <p class="nom">Urban Echoes</p>
                             <p class="artist">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre9.png" alt="Intertwined Heart">
+                            <img src="/img/oeuvre9.png" alt="Intertwined Heart">
                             <p class="nom">Intertwined Heart</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
@@ -69,17 +69,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="img/oeuvre4.png" alt="Dissollusions">
+                            <img src="/img/oeuvre4.png" alt="Dissollusions">
                             <p class="nom">Dissollusions</p>
                             <p class="artist">Lena Chastel</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre5.png" alt="Sunset">
+                            <img src="/img/oeuvre5.png" alt="Sunset">
                             <p class="nom">Sunset</p>
                             <p class="artist">Iva Lassen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre6.png" alt="C'est Théo">
+                            <img src="/img/oeuvre6.png" alt="C'est Théo">
                             <p class="nom">C'est Théo</p>
                             <p class="artist">Théo Goven</p>
                         </div>
@@ -87,17 +87,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="img/oeuvre1.png" alt="Trois Sommets">
+                            <img src="/img/oeuvre1.png" alt="Trois Sommets">
                             <p class="nom">Trois Sommets</p>
                             <p class="artist">Étienne Monparnasse</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre2.png" alt="Émotion №4">
+                            <img src="/img/oeuvre2.png" alt="Émotion №4">
                             <p class="nom">Émotion №4</p>
                             <p class="artist">Lia Verden</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="img/oeuvre3.png" alt="Pause Sculptée">
+                            <img src="/img/oeuvre3.png" alt="Pause Sculptée">
                             <p class="nom">Pause sculptée</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
@@ -121,45 +121,45 @@
                 <div class="slides">
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste1.png" alt="Rémi Fox">
+                            <img src="/img/artiste1.png" alt="Rémi Fox">
                             <p class="nom">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste2.png" alt="The Unseen">
+                            <img src="/img/artiste2.png" alt="The Unseen">
                             <p class="nom">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste3.png" alt="Iva Lassen">
+                            <img src="/img/artiste3.png" alt="Iva Lassen">
                             <p class="nom">Iva Lassen</p>
                         </div>
                     </div>
 
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste4.png" alt="Oscar Leroux">
+                            <img src="/img/artiste4.png" alt="Oscar Leroux">
                             <p class="nom">Oscar Leroux</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste5.png" alt="Lena Chastel">
+                            <img src="/img/artiste5.png" alt="Lena Chastel">
                             <p class="nom">Lena Chastel</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste6.png" alt="Étienne Monparnasse">
+                            <img src="/img/artiste6.png" alt="Étienne Monparnasse">
                             <p class="nom">Étienne Monparnasse</p>
                         </div>
                     </div>
 
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste7.png" alt="Lia Verden">
+                            <img src="/img/artiste7.png" alt="Lia Verden">
                             <p class="nom">Lia Verden</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste8.png" alt="Théo Goven">
+                            <img src="/img/artiste8.png" alt="Théo Goven">
                             <p class="nom">Théo Goven</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste9.png" alt="Amélie Caron">
+                            <img src="/img/artiste9.png" alt="Amélie Caron">
                             <p class="nom">Amélie Caron</p>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
 
         <section class="instagram">
             <div class="inst-left">
-                <img src="instagram.jpg" alt="Instagram">
+                <img src="/img/instagram.jpg" alt="Instagram">
                 <div class="suivez-nous">
                     <h3>DEDALGALLERY</h3>
                     <p>Suivez-nous sur notre Instagram</p>
@@ -190,7 +190,7 @@
             <div class="events-gallery">
                 <div class="event-left">
                     <div class="event">
-                        <img class="im1" src="evenement1.jpg" alt="Événement 1">
+                        <img class="im1" src="/img/evenement1.jpg" alt="Événement 1">
                         <div class="overlay">
                             <p class="nom1">Atelier de sculpture</p>
                             <p class="time">07/12/2024 19:00-20:30</p>
@@ -199,14 +199,14 @@
                 </div>
                 <div class="event-right">
                     <div class="event">
-                        <img class="im2" src="evenement2.jpg" alt="Événement 2">
+                        <img class="im2" src="/img/evenement2.jpg" alt="Événement 2">
                         <div class="overlay">
                             <p class="nom1">Performance chorégraphique</p>
                             <p class="time">14/12/2024 19:00-20:30</p>
                         </div>
                     </div>
                     <div class="event">
-                        <img class="im2" src="evenement3.jpg" alt="Événement 3">
+                        <img class="im2" src="/img/evenement3.jpg" alt="Événement 3">
                         <div class="overlay">
                             <p class="nom1">Public Talk</p>
                             <p class="time">21/12/2024 19:00-20:30</p>
