--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <section class="instagram">
             <div class="inst-left">
-                <img src="/img/instagram.jpg" alt="Instagram">
+                <img src="img/instagram.jpg" alt="Instagram">
                 <div class="suivez-nous">
                     <h3>DEDALGALLERY</h3>
                     <p>Suivez-nous sur notre Instagram</p>
@@ -190,7 +190,7 @@
             <div class="events-gallery">
                 <div class="event-left">
                     <div class="event">
-                        <img class="im1" src="/img/evenement1.jpg" alt="Événement 1">
+                        <img class="im1" src="img/evenement1.jpg" alt="Événement 1">
                         <div class="overlay">
                             <p class="nom1">Atelier de sculpture</p>
                             <p class="time">07/12/2024 19:00-20:30</p>
@@ -199,14 +199,14 @@
                 </div>
                 <div class="event-right">
                     <div class="event">
-                        <img class="im2" src="/img/evenement2.jpg" alt="Événement 2">
+                        <img class="im2" src="img/evenement2.jpg" alt="Événement 2">
                         <div class="overlay">
                             <p class="nom1">Performance chorégraphique</p>
                             <p class="time">14/12/2024 19:00-20:30</p>
                         </div>
                     </div>
                     <div class="event">
-                        <img class="im2" src="/img/evenement3.jpg" alt="Événement 3">
+                        <img class="im2" src="img/evenement3.jpg" alt="Événement 3">
                         <div class="overlay">
                             <p class="nom1">Public Talk</p>
                             <p class="time">21/12/2024 19:00-20:30</p>
