--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header class="header">
             <div class="logo-container">
-                <img src="img/photo.logo.png" alt="Logo" class="logo">
+                <img src="images/photo.logo.png" alt="Logo" class="logo">
                 <h2 class="name">dedal des couleurs</h2>
             </div>
 
@@ -175,7 +175,7 @@
 
         <section class="instagram">
             <div class="inst-left">
-                <img src="img/instagram.jpg" alt="Instagram">
+                <img src="images/instagram.jpg" alt="Instagram">
                 <div class="suivez-nous">
                     <h3>DEDALGALLERY</h3>
                     <p>Suivez-nous sur notre Instagram</p>
