--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="slides">
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre7.png" alt="Autoportrait">
+                            <img src="images/oeuvre7.png" alt="Autoportrait">
                             <p class="nom">Autoportrait</p>
                             <p class="artist">Rémi Fox</p>
                         </div>
