--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo-container">
                 <img src="images/photo.logo.png" alt="Logo" class="logo">
-                <h2 class="name">dedal des couleurs</h2>
+                <h1>dedal des couleurs</h1>
             </div>
 
             <div class="menu-container">
