--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="events-gallery">
                 <div class="event-left">
                     <div class="event">
-                        <img class="im1" src="evenement1.jpg" alt="Événement 1">
+                        <img class="im1" src="images/evenement1.jpg" alt="Événement 1">
                         <div class="overlay">
                             <p class="nom1">Atelier de sculpture</p>
                             <p class="time">07/12/2024 19:00-20:30</p>
@@ -199,14 +199,14 @@
                 </div>
                 <div class="event-right">
                     <div class="event">
-                        <img class="im2" src="evenement2.jpg" alt="Événement 2">
+                        <img class="im2" src="images/evenement2.jpg" alt="Événement 2">
                         <div class="overlay">
                             <p class="nom1">Performance chorégraphique</p>
                             <p class="time">14/12/2024 19:00-20:30</p>
                         </div>
                     </div>
                     <div class="event">
-                        <img class="im2" src="evenement3.jpg" alt="Événement 3">
+                        <img class="im2" src="images/evenement3.jpg" alt="Événement 3">
                         <div class="overlay">
                             <p class="nom1">Public Talk</p>
                             <p class="time">21/12/2024 19:00-20:30</p>
