--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="propos">
                     <div class="ddc">dedal des couleurs</div>
                     <div class="fondation">Depuis sa fondation, notre galerie d’art contemporain met en avant des artistes locaux et internationaux<br><br>Elle propose des expositions dont la mission est d'inspirer et d'offrir une nouvelle perspective sur l’art</div>
-                    <button class="decouvrir">Découvrir</button>
+                    <button class="decouvrir" onclick="location.href='page2.html'">Découvrir</button>
                 </div>
             </div>
 
