--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                             <p class="artist">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre8.png" alt="Urban Echoes">
+                            <img src="images/oeuvre8.png" alt="Urban Echoes">
                             <p class="nom">Urban Echoes</p>
                             <p class="artist">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre9.png" alt="Intertwined Heart">
+                            <img src="images/oeuvre9.png" alt="Intertwined Heart">
                             <p class="nom">Intertwined Heart</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
@@ -69,17 +69,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre4.png" alt="Dissollusions">
+                            <img src="images/oeuvre4.png" alt="Dissollusions">
                             <p class="nom">Dissollusions</p>
                             <p class="artist">Lena Chastel</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre5.png" alt="Sunset">
+                            <img src="images/oeuvre5.png" alt="Sunset">
                             <p class="nom">Sunset</p>
                             <p class="artist">Iva Lassen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre6.png" alt="C'est Théo">
+                            <img src="images/oeuvre6.png" alt="C'est Théo">
                             <p class="nom">C'est Théo</p>
                             <p class="artist">Théo Goven</p>
                         </div>
@@ -87,17 +87,17 @@
 
                     <div class="slide">
                         <div class="gallery-item">
-                            <img src="oeuvre1.png" alt="Trois Sommets">
+                            <img src="images/oeuvre1.png" alt="Trois Sommets">
                             <p class="nom">Trois Sommets</p>
                             <p class="artist">Étienne Monparnasse</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre2.png" alt="Émotion №4">
+                            <img src="images/oeuvre2.png" alt="Émotion №4">
                             <p class="nom">Émotion №4</p>
                             <p class="artist">Lia Verden</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="oeuvre3.png" alt="Pause Sculptée">
+                            <img src="images/oeuvre3.png" alt="Pause Sculptée">
                             <p class="nom">Pause sculptée</p>
                             <p class="artist">Oscar Leroux</p>
                         </div>
@@ -121,45 +121,45 @@
                 <div class="slides">
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste1.png" alt="Rémi Fox">
+                            <img src="images/artiste1.png" alt="Rémi Fox">
                             <p class="nom">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste2.png" alt="The Unseen">
+                            <img src="images/artiste2.png" alt="The Unseen">
                             <p class="nom">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste3.png" alt="Iva Lassen">
+                            <img src="images/artiste3.png" alt="Iva Lassen">
                             <p class="nom">Iva Lassen</p>
                         </div>
                     </div>
 
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste4.png" alt="Oscar Leroux">
+                            <img src="images/artiste4.png" alt="Oscar Leroux">
                             <p class="nom">Oscar Leroux</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste5.png" alt="Lena Chastel">
+                            <img src="images/artiste5.png" alt="Lena Chastel">
                             <p class="nom">Lena Chastel</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste6.png" alt="Étienne Monparnasse">
+                            <img src="images/artiste6.png" alt="Étienne Monparnasse">
                             <p class="nom">Étienne Monparnasse</p>
                         </div>
                     </div>
 
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="artiste7.png" alt="Lia Verden">
+                            <img src="images/artiste7.png" alt="Lia Verden">
                             <p class="nom">Lia Verden</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste8.png" alt="Théo Goven">
+                            <img src="images/artiste8.png" alt="Théo Goven">
                             <p class="nom">Théo Goven</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="artiste9.png" alt="Amélie Caron">
+                            <img src="images/artiste9.png" alt="Amélie Caron">
                             <p class="nom">Amélie Caron</p>
                         </div>
                     </div>
