--- a/index.html
+++ b/index.html
@@ -259,6 +259,6 @@
             </div>
         </footer>
         </section>
-        <script src="site.js"></script>
+        <script src="script.js"></script>
     </body>
 </html> 
