--- a/page2.html
+++ b/page2.html
@@ -33,8 +33,8 @@
 
         <section class="histoire">
             <div class="histoire-photo">
-                <img src="histoire1.png" alt="Galerie à l'intérieur">
-                <img src="histoire2.png" alt="Visiteurs">
+                <img src="images/histoire1.png" alt="Galerie à l'intérieur">
+                <img src="images/histoire2.png" alt="Visiteurs">
             </div>
 
             <div class="histoire-texte">
@@ -56,7 +56,7 @@
             </div>
 
             <div class="dechewsky-photo">
-                <img src="histoire3.png" alt="M. Dechewsky">
+                <img src="images/histoire3.png" alt="M. Dechewsky">
             </div>
         </section>
 
