--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
     <body>
         <header class="header">
             <div class="logo-container">
-                <img src="photo.logo.png" alt="Logo" class="logo">
+                <img src="images/photo.logo.png" alt="Logo" class="logo">
                 <h1>dedal des couleurs</h1>
             </div>
 
