--- a/page2.html
+++ b/page2.html
@@ -22,9 +22,9 @@
             <div class="menu-container">
                 <nav class="menu">
                     <ul class="menu-list">
-                        <li><a href="siteweb.html#oeuvres">oeuvres</a></li>
-                        <li><a href="siteweb.html#artistes">artistes</a></li>
-                        <li><a href="siteweb.html#évènements">évènements</a></li>
+                        <li><a href="index.html#oeuvres">oeuvres</a></li>
+                        <li><a href="index.html#artistes">artistes</a></li>
+                        <li><a href="index.html#évènements">évènements</a></li>
                         <li><a href="#contact">contact</a></li>
                     </ul>
                 </nav>
